--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,82 +1,169 @@
 .learn-sidebar {
-    width: 25%;
-    position: fixed;
-    height: 100%;
-    list-style-type: none;
+  width: 25%;
+  position: fixed;
+  height: 100%;
+  list-style-type: none;
 }
 
 .learn-sidebar .learn-link {
-    padding: 12px;
+  padding: 12px;
 }
 
 .learn-link a {
-    color: darkgrey;
-    padding: none;
-    text-decoration: none;
+  color: darkgrey;
+  padding: none;
+  text-decoration: none;
 }
 
 .learn-link a.active {
-    color: yellow;
+  color: yellow;
 }
 
 .learn-link a:hover {
-    color: yellowgreen;
+  color: yellowgreen;
 }
 
 .learn-article {
-    margin-left: 25%;
-    padding: 16px 16px;
+  margin-left: 25%;
+  padding: 16px 16px;
 }
 
 .learn-main-text {
-    text-shadow: 2px 2px 2px lightgrey;
+  text-shadow: 2px 2px 2px lightgrey;
 }
 
 .learn-descriptor {
-    padding: 100px;
-    background-color: lightgrey;
+  padding: 100px;
+  background-color: lightgrey;
 }
 
 .navbar-container {
-    background: whitesmoke;
-    height: 120px;
-    display: flex;
-    justify-content: space-between;
+  background: whitesmoke;
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .navbar-list {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    @media screen (max-width: 768px) {
-        /* Mobile ! TODO */
-        display: none
-    }
+  @media screen (max-width: 768px) {
+    /* Mobile ! TODO */
+    display: none;
+  }
 }
 
 .nav-link {
-    color: #808080;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 0 1rem;
-    height: 100%;
-    cursor: pointer;
-
+  color: #b7b2b2;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
+  cursor: pointer;
 }
 
-.nav-link li.active {
-    color: #808080;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 0 1rem;
-    height: 100%;
-    cursor: pointer;
-    color: #000000;
-
+.nav-link:hover {
+  color: #858585;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
+  cursor: pointer;
+  color: #000000;
 }
 
+/*  navbar logo style */
+.navbar-logo {
+  height: 100%;
+  width: 100px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: top;
+  justify-content: left;
+}
+.nav-container-layout {
+  padding: none;
+}
+
+/*  main content style */
+.main-body {
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.col {
+  flex: 50%;
+}
+
+.left-small {
+  flex: 25%;
+  background: #ec0606;
+}
+
+.right-small {
+  flex: 25%;
+  background: #0628ec;
+}
+
+.left-big {
+  flex: 50%;
+  background: #ec0606;
+}
+
+.right-big {
+  flex: 50%;
+  background: #0628ec;
+}
+
+.left-mega {
+  flex: 75%;
+  background: #ec0606;
+}
+
+.right-mega {
+  flex: 75%;
+  background: #0628ec;
+}
+
+/* big text with light dropshadow and poppins font */
+.home-main-text {
+  font-family: "Poppins", sans-serif;
+  font-size: 3rem;
+  text-shadow: 2px 2px 2px lightgrey;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+/* background image container centered */
+.home-container {
+  height: 70vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/*  background image */
+.background-image {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.8)),
+    url("https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-size: cover;
+  background-position: center;
+  fill-opacity: 80%;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/*  a footer style */
 footer {
-    padding: 100px;
+  background-color: #f5f5f5;
+  padding: 100px;
+  text-align: center;
 }
