--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -33,13 +33,13 @@
 }
 
 .learn-descriptor {
-  padding: 100px;
+  padding: 60px;
   background-color: lightgrey;
 }
 
 .navbar-container {
-  background: whitesmoke;
-  height: 120px;
+  background: rgb(5, 5, 255);
+  height: 60px;
   display: flex;
   justify-content: space-between;
 }
@@ -47,11 +47,12 @@
 .navbar-list {
   display: flex;
   align-items: center;
+  justify-content: center;
 
-  @media screen (max-width: 768px) {
-    /* Mobile ! TODO */
+  /* @media screen (max-width: 768px) {
+   
     display: none;
-  }
+  } */
 }
 
 .nav-link {
@@ -59,7 +60,6 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  padding: 0 1rem;
   height: 100%;
   cursor: pointer;
 }
@@ -134,36 +134,45 @@
 .home-main-text {
   font-family: "Poppins", sans-serif;
   font-size: 3rem;
+  position: absolute;
+  bottom: 0;
+  left: 30px;
   text-shadow: 2px 2px 2px lightgrey;
   text-align: center;
-  padding: 0;
-  margin: 0;
+  padding: none;
+  margin: none;
 }
 
 /* background image container centered */
 .home-container {
-  height: 70vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  
+
 }
 /*  background image */
 .background-image {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.8)),
-    url("https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.8));
   background-size: cover;
+  object-fit: cover;
+  object-position: top;
   background-position: center;
   fill-opacity: 80%;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+.main-container {
+  width: 100%;
+ 
+
+}
+
 /*  a footer style */
 footer {
-  background-color: #f5f5f5;
-  padding: 100px;
+  background-color: #ff0000;
+  height: 40px;
   text-align: center;
+  margin: 0;
 }
