--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -40,15 +40,20 @@
 .navbar-container {
   background: rgb(5, 5, 255);
   height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .navbar-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
+  position: absolute;
+  right: 50px;
+  top: 50px;
   /* @media screen (max-width: 768px) {
    
     display: none;
@@ -57,8 +62,6 @@
 
 .nav-link {
   color: #b7b2b2;
-  display: flex;
-  align-items: center;
   text-decoration: none;
   height: 100%;
   cursor: pointer;
@@ -145,12 +148,14 @@
 
 /* background image container centered */
 .home-container {
-  
-
 }
 /*  background image */
 .background-image {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.8));
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.8),
+    rgba(255, 255, 255, 0.8)
+  );
   background-size: cover;
   object-fit: cover;
   object-position: top;
@@ -165,8 +170,6 @@
 
 .main-container {
   width: 100%;
- 
-
 }
 
 /*  a footer style */
