--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -40,7 +40,7 @@
 .navbar-container {
   background: rgb(5, 5, 255);
   height: 60px;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
