--- a/src/styles/flipcardstylesheet.css
+++ b/src/styles/flipcardstylesheet.css
@@ -1,10 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/*
+.img {
+    max-width: 100%;
+    vertical-align: middle;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+.container{
+    max-width: 500px;
+}
+.flip-main{
+    min-height:100vh;
 
+}
+.flip-main .flip-card{
+    flex: 0 0 calc(33.33% - 30px);
+    margin: 0 15px 30px;
+    perspective: 1000px;
+}
+.flip-main .flip-card-inner{
+    box-shadow: 0 0 10px  lightgray;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: all 1s ease;
+}
+.flip-main .flip-card-front img{
+    width: 100%;
+}
+.flip-main .flip-card-front,
+.flip-main .flip-card-back{
+    backface-visibility: hidden;
+}
+.flip-main .flip-card-back{
+    background-color: white;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.flip-main .flip-card-back .p{
+    margin: 0 0 10px;
+}
+.flip-main .flip-card:hover .flip-card-inner{
+    transform: rotateY(180deg);
+}
+*/
 .flip-card {
     background-color: transparent;
-    width: 200px;
-    height: 300px;
+    min-width: 100px;
+    height: 150px;
     float: left;
    
    
@@ -43,8 +96,8 @@
   
 }
 .flip-card-img{
-   width: 200px;
-   height: 300px;
+   width: 100px;
+   height: 150px;
    border-radius: 10%;
  
 }
