--- a/src/styles/LearnStyle.css
+++ b/src/styles/LearnStyle.css
@@ -21,12 +21,42 @@
     background: white;
 }
 .backgroundImages {
-    transform: translateZ(-1px);
-    text-align: center;
+    transform: translateZ(-0.25px);
+    width: 100%;
 }
 .main {
     transform: translateZ(0px);
     font-family:'Poppins', sans serif;
+}
+
+
+img.backgroundimgleft{
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 50%;
+  opacity: 0.3;
+  position: relative;
+  left: 0px;
+}
+
+img.backgroundimgright{
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 50%;
+  opacity: 0.3;
+  position: relative;
+  left: 50%;
+}
+
+img.backgroundimgcenter{
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  opacity: 0.3;
+  float: center;
+  padding-bottom: 20px;
 }
 
 .learn-sidebar {
@@ -40,8 +70,9 @@
   }
   
   .learn-link a {
-    color: darkgrey;
+    color: black;
     padding: none;
+    font-weight: 700;
     text-decoration: none;
   }
   
@@ -56,7 +87,7 @@
   .learn-article {
       float: left;
     margin-left: 15%;
-    width: 40%;
+    width: 60%;
     padding: 4px 4px;
   }
   
@@ -66,6 +97,7 @@
   
   .learn-descriptor {
     padding: 60px;
+    opacity: 50%;
     background-color: lightgrey;
   }
   .learn-flipCardContainer {
